--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Wx-Scintilla-0.36.tar.gz: b2663a50d2b8d458d5ae09e10873431b84679d3b
 sources:
-  "Wx-Scintilla-0.36.tar.gz": b2663a50d2b8d458d5ae09e10873431b84679d3b
+  Wx-Scintilla-0.39.tar.gz: 40cb8b7b7ae0b8bb418d7c885022b821369ce42e
